<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPurpleBackground"
        android:padding="@dimen/row_layout_padding">

        <ImageView
            android:contentDescription="@string/gold_bag_image"
            android:layout_width="@dimen/recycler_icon_size"
            android:layout_height="@dimen/recycler_icon_size"
            android:src="@drawable/money"
            android:background="@color/transparent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/row_product"
            android:textSize="@dimen/recycler_text_size"
            android:paddingLeft="@dimen/row_padding"
            android:paddingRight="@dimen/row_padding"/>
        <TextView
            android:textSize="@dimen/recycler_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_quantity" />
    </LinearLayout>
